--- a/taskmaster/src/main/resources/templates/contacts.html
+++ b/taskmaster/src/main/resources/templates/contacts.html
@@ -24,8 +24,8 @@
                 <div>
                     <label th:for="title" class="block text-lg font-medium text-black">Title</label>
                     <input th:field="*{title}" type="text" id="title" name="title" placeholder="Title"
-                           class="w-full px-4 py-3 mt-2 rounded-md border focus:outline-none focus:ring focus:ring-primary"
-                           required/>
+                           required minlength="5" maxlength="200"
+                           class="w-full px-4 py-3 mt-2 rounded-md border focus:outline-none focus:ring focus:ring-primary"/>
                     <div th:errors="*{title}"
                          class="text-sm text-destructive">
                         <p>Title error message</p>
@@ -34,8 +34,8 @@
                 <div>
                     <label th:for="email" class="block text-lg font-medium text-black">Email</label>
                     <input th:field="*{email}" type="email" id="email" name="email" placeholder="Email"
-                           class="w-full px-4 py-3 mt-2 rounded-md border focus:outline-none focus:ring focus:ring-primary"
-                           required/>
+                           required
+                           class="w-full px-4 py-3 mt-2 rounded-md border focus:outline-none focus:ring focus:ring-primary"/>
                     <div th:errors="*{email}"
                          class="text-sm text-destructive">
                         <p>Email error message</p>
@@ -45,8 +45,9 @@
             <div>
                 <label th:for="message" class="block text-lg font-medium text-black">Message</label>
                 <textarea th:field="*{message}" id="message" name="message" rows="6" placeholder="Your Message"
-                          class=" text-black w-full px-4 py-3 mt-2 rounded-md border focus:outline-none focus:ring focus:ring-primary"
-                          required></textarea>
+                          required minlength="12" maxlength="2000"
+                          class=" text-black w-full px-4 py-3 mt-2 rounded-md border
+                          focus:outline-none focus:ring focus:ring-primary"></textarea>
                 <div th:errors="*{message}"
                      class="text-sm text-destructive">
                     <p>Message error message</p>
