--- a/taskmaster/src/main/resources/templates/login.html
+++ b/taskmaster/src/main/resources/templates/login.html
@@ -11,6 +11,7 @@
                     Username
                 </label>
                 <input th:value="${username}"
+                       required minlength="2" maxlength="15"
                        type="text" id="username" name="username"
                        th:placeholder="#{username_placeholder}"
                        class="w-full px-3 py-2 mt-1 text-primary  border border-primary
@@ -22,6 +23,7 @@
                 </label>
                 <input
                         type="password"
+                        required minlength="5" maxlength="15"
                         id="password" name="password"
                         th:placeholder="#{password_placeholder}"
                         class="w-full px-3 py-2 mt-1 text-primary  border border-primary rounded-md
