--- a/taskmaster/src/main/resources/templates/login.html
+++ b/taskmaster/src/main/resources/templates/login.html
@@ -35,14 +35,14 @@
                      hover:bg-primary/80 focus:outline-none focus:ring focus:ring-primary">
                 Login
             </button>
-            <p class="text-muted-foreground text-sm mt-4">
-                Don't have an account?
-                <a th:href="@{/users/register}" class="text-black hover:text-gray-600">Register</a>
-            </p>
         </form>
         <div th:if="${hasError}" th:text="#{login_bad_credential}" class="text-center text-lg text-destructive ">
             <p>Incorrect username or password!</p>
         </div>
+        <p class="text-muted-foreground text-sm mt-4 mb-2">
+            Don't have an account?
+            <a th:href="@{/users/register}" class="text-black hover:text-gray-600">Register</a>
+        </p>
     </div>
 </div>
 </body>
