--- a/taskmaster/src/main/resources/templates/fragments/navigation.html
+++ b/taskmaster/src/main/resources/templates/fragments/navigation.html
@@ -61,7 +61,7 @@
             <ul
                     th:classappend="${#locale.toString().equals('en_US')} ? 'left-[-90%]' : 'left-[-130%]'"
                     class="group-hover:block hidden absolute bg-primary w-22 rounded-lg top-full">
-                <li class="px-4 py-2"><a th:text="#{edit_label}" th:href="@{/users/edit}">Edit data</a></li>
+                <li class="px-4 py-2"><a th:text="#{profile_label}" th:href="@{/users/profile}">Profile</a></li>
                 <li class="px-4 pb-2"><a th:text="#{change_password_label}" th:href="@{/users/change-password}">Change
                     password</a></li>
                 <li class="px-4 pb-2">
