--- a/taskmaster/src/main/resources/templates/profile-user.html
+++ b/taskmaster/src/main/resources/templates/profile-user.html
@@ -4,7 +4,7 @@
 <form th:replace="~{/fragments/language::language(true)}"></form>
 <div class="text-primary-foreground min-h-screen flex items-center justify-center">
     <div class="bg-card lg:w-3/4 xl:w-1/2 py-8 px-12 rounded-lg shadow-lg">
-        <h2 class="text-2xl text-black font-bold mb-6">Edit</h2>
+        <h2 class="text-2xl text-black font-bold mb-6">Profile</h2>
         <form th:method="put"
               th:action="@{/users/edit}"
               th:object="${editData}"
