--- a/taskmaster/src/main/resources/templates/home.html
+++ b/taskmaster/src/main/resources/templates/home.html
@@ -9,7 +9,7 @@
 </section>
 <div class="bg-background text-primary-foreground min-h-screen mx-2 flex flex-col items-center justify-center">
     <main class="container mx-auto mt-8 grid grid-cols-1  md:grid-cols-2">
-        <section id="my-tasks" class="max-w-[45em] bg-card rounded-lg p-6 shadow-md overflow-y-auto max-h-96">
+        <section id="my-tasks" class="max-w-[45em] min-h-96 bg-card rounded-lg p-6 shadow-md overflow-y-auto max-h-96">
             <div class="flex justify-between items-center mb-4">
                 <h2 class="text-lg text-black font-semibold">My Tasks</h2>
                 <div class="flex items-center space-x-2">
