--- a/taskmaster/src/main/resources/templates/contacts.html
+++ b/taskmaster/src/main/resources/templates/contacts.html
@@ -34,7 +34,7 @@
                 <div>
                     <label th:for="email" class="block text-lg font-medium text-black">Email</label>
                     <input th:field="*{email}" type="email" id="email" name="email" placeholder="Email"
-                           required
+                           th:value="${loggedUserEmail}"
                            class="w-full px-4 py-3 mt-2 rounded-md border focus:outline-none focus:ring focus:ring-primary"/>
                     <div th:errors="*{email}"
                          class="text-sm text-destructive">
