Create package for schedulers, edit home.js and  validation for add/edit task.

--- a/taskmaster/src/main/resources/templates/home.html
+++ b/taskmaster/src/main/resources/templates/home.html
@@ -162,4 +162,5 @@
 </body>
 <script th:src="@{/js/dates.js}"></script>
 <script th:src="@{/js/pagingSortingAndFiltering.js}"></script>
+<script th:src="@{/js/home.js}"></script>
 </html>
