--- a/taskmaster/src/main/resources/templates/error/404.html
+++ b/taskmaster/src/main/resources/templates/error/404.html
@@ -4,11 +4,8 @@
 <body>
 <div class="min-h-screen flex items-center justify-center bg-background">
     <div class="max-w-md p-4 bg-card rounded-lg shadow-md">
-        <h1 class="text-3xl font-bold text-black">Forbidden</h1>
-        <p class="text-lg text-muted-foreground">You don't have permission to perform this action or to access this
-            resource.</p>
-        <p class="text-sm text-muted-foreground">Please check your credentials or contact the site administrator for
-            assistance.</p>
+        <h1 class="text-3xl font-bold text-black">Page not found</h1>
+        <p class="text-lg text-muted-foreground">We're sorry, we couldn't find the page you requested</p>
         <div class="flex justify-between">
             <button class="bg-primary text-primary-foreground hover:bg-primary/80 py-2 px-4 rounded-lg mt-4"
                     onclick="history.back()">Go Back
