Add apache kafka producer in mail-send service and edit MailHistoryInfoDTO

--- a/taskmaster/src/main/resources/templates/mail-history.html
+++ b/taskmaster/src/main/resources/templates/mail-history.html
@@ -40,7 +40,8 @@
                 <td th:text="*{template}" class="px-5 py-5 border-b border-gray-200  bg-white text-sm truncate">
                     CONTACT_US
                 </td>
-                <td th:text="*{#temporals.format(date, 'dd-MM-yyyy  kk:mm')}"
+<!--                th:text="*{#temporals.format(date, 'dd-MM-yyyy  HH:mm')}"-->
+                <td th:text="*{date}"
                     class="px-5 py-5 border-b border-gray-200  bg-white text-sm whitespace-nowrap">
                     2024-07-16 14:30
                 </td>
