--- a/taskmaster/src/main/resources/templates/login.html
+++ b/taskmaster/src/main/resources/templates/login.html
@@ -1,49 +1,37 @@
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{/fragments/head::head}"></head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" th:href="@{/css/login.css}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Login</title>
+</head>
 <body>
-<form th:replace="~{/fragments/language::language(true)}"></form>
-<div class="bg-blue-500 min-h-screen flex items-center justify-center bg-background dark:bg-black">
-    <div class="bg-card dark:bg-card-foreground rounded-lg shadow-lg p-8 pb-2 max-w-sm w-full">
-        <h2 th:text="#{login_label}" class="text-2xl font-bold text-primary text-center mb-6">Login</h2>
-        <form th:method="post" th:action="@{/users/login}">
-            <div class="mb-4">
-                <label th:text="#{username_label}" for="username" class="block text-sm font-medium text-primary">
-                    Username
-                </label>
-                <input th:value="${username}"
-                       required minlength="2" maxlength="15"
-                       type="text" id="username" name="username"
-                       th:placeholder="#{username_placeholder}"
-                       class="w-full px-3 py-2 mt-1 text-primary  border border-primary
-                       rounded-md focus:outline-none focus:ring focus:ring-primary"/>
-            </div>
-            <div class="mb-6">
-                <label th:text="#{password_label}" for="password" class="block text-sm font-medium text-primary">
-                    Password
-                </label>
-                <input
-                        type="password"
+    <form th:method="post" th:action="@{/users/login}" class="login-form">
+        <h1 th:text="#{login_label}">Login</h1>
+        <div class="field">
+            <input th:value="${username}"
+                   required minlength="2" maxlength="15"
+                   type="text" id="username" name="username"
+                   placeholder="">
+            <p class="example">example: konstantin.dankov@gmail.com</p>
+            <label th:text="#{username_label}" for="username">Username</label>
+        </div>
+        <div class="field">
+                <input  type="password"
                         required minlength="5" maxlength="15"
                         id="password" name="password"
-                        th:placeholder="#{password_placeholder}"
-                        class="w-full px-3 py-2 mt-1 text-primary  border border-primary rounded-md
-                         focus:outline-none focus:ring focus:ring-primary"/>
-            </div>
-            <button type="submit"
-                    th:text="#{login_label}"
-                    class="w-full bg-primary text-primary-foreground p-3 rounded-md
-                     hover:bg-primary/80 focus:outline-none focus:ring focus:ring-primary">
-                Login
-            </button>
-        </form>
-        <div th:if="${hasError}" th:text="#{login_bad_credential}" class="text-center text-lg text-destructive ">
-            <p>Incorrect username or password!</p>
+                        placeholder="">
+                <p class="requirements">minimum 6 characters, letters and numbers, at least 1 special character</p>
+                <label th:text="#{password_label}" for="password">Password</label>
+                <i class="fa-solid fa-eye" id="password-shower"></i>
+                <i class="fa-solid fa-eye-slash" id="password-hider"></i>
         </div>
-        <p class="text-muted-foreground text-sm mt-4 mb-2">
-            Don't have an account?
-            <a th:href="@{/users/register}" class="text-black hover:text-gray-600">Register</a>
-        </p>
-    </div>
-</div>
+        <input type="submit" th:value="#{login_label}">
+        <p th:if="${hasError}" th:text="#{login_bad_credential}" class="incorrect-credentials">Incorrect username or password</p>
+    </form>
 </body>
+<script th:src="@{/js/password-show-hide.js}"></script>
+<!--<script src="script.js"></script>-->
 </html>
